# adr-skills

./: .gitignore  README.md  apm.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.md  usage.md
docs/adr/: 0001-two-layer-architecture.md  0002-scripts-not-cli.md  0003-consent-gated-recording.md  0004-no-vendoring.md  0005-adr-init-dual-mode.md  0006-glob-toctree.md  index.md
docs/adr/_templates/: adr_template.md
docs/superpowers/plans/: 2026-05-16-adr-skills.md
docs/superpowers/specs/: 2026-05-16-adr-skills-design.md
skills/adr-author/: SKILL.md
skills/adr-author/scripts/: adrlib.py  check_adr.py  create_adr.py  set_status.py  supersede.py
skills/adr-init/: SKILL.md
skills/adr-init/templates/: conf.py  index.md
tests/: test_adrlib.py  test_check_adr.py  test_create_adr.py  test_set_status.py  test_supersede.py
